All these settings are not needed, we are not using `scripted` tests